--- a/ResponsiveApp/package.json
+++ b/ResponsiveApp/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/push-notification-ios": "^1.10.1",
+    "@react-native-firebase/app": "^17.3.1",
+    "@react-native-firebase/messaging": "^17.3.1",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
@@ -18,7 +21,9 @@
     "axios": "^1.3.2",
     "react": "^18.2.0",
     "react-native": "0.71.1",
+    "react-native-flash-message": "^0.4.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-size-matters": "^0.4.0",
